@@ -77,6 +77,8 @@ log_open(int option, int facility, const char *filename)
 void
 log_reopen(const char *filename, uint8_t verbose)
 {
+	if(strcmp(filename, "/dev/stdout")==0 || strcmp(filename, "/dev/stderr")==0)
+		return;
 	if (filename) {
 		FILE *file = fopen(filename, "a");
 		if (!file) {
